--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=1
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://source/ui/views/options/options.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://source/", "res://source/ui/", "res://source/ui/views/", "res://source/ui/templates/", "res://source/managers/", "res://assets/icons/")
+dock_filesystem_selected_paths=PackedStringArray("res://source/scripts/managers/query_manager.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://source/", "res://source/ui/", "res://source/ui/views/", "res://source/ui/templates/", "res://source/scripts/", "res://assets/icons/")
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_node_current_tab=0
@@ -36,7 +36,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://source/ui/views/main_menu/main_menu.tscn", "res://source/ui/views/home_view/home_view.tscn", "res://source/ui/views/game_setup/game_setup.tscn", "res://source/ui/views/options/options.tscn")
-current_scene="res://source/ui/views/options/options.tscn"
+current_scene="res://source/ui/views/main_menu/main_menu.tscn"
 center_split_offset=-359
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -44,8 +44,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://source/ui/views/game_setup/game_setup.gd", "res://source/ui/views/home_view/home_view.gd", "res://source/ui/views/main_menu/main_menu.gd", "res://source/ui/views/options/options.gd", "res://source/managers/scene_manager.gd"]
-selected_script="res://source/ui/views/options/options.gd"
+open_scripts=["res://source/ui/views/game_setup/game_setup.gd", "res://source/scripts/managers/game_manager.gd", "res://source/scripts/managers/query_manager.gd"]
+selected_script="res://source/scripts/managers/query_manager.gd"
 open_help=[]
 script_split_offset=1672
 list_split_offset=0
